# EJERCICIO_RPA_PABLO

./: ejercicio2completo.py  ejercicioControlTeclado.py  evaluacionRPA.py  historial_precios.csv  proyectoRPA.py  pyproject.toml  scriptEjemplo.py
